@@ -3,33 +3,24 @@ package com.creavispace.project.domain.search.service;
 import com.creavispace.project.common.dto.response.SuccessResponseDto;
 import com.creavispace.project.common.dto.type.PostType;
 import com.creavispace.project.common.dto.type.SearchType;
-import com.creavispace.project.domain.community.dto.response.CommunityHashTagDto;
-import com.creavispace.project.domain.community.dto.response.CommunityResponseDto;
-import com.creavispace.project.domain.community.entity.Community;
+import com.creavispace.project.common.exception.CreaviCodeException;
+import com.creavispace.project.common.post.entity.Post;
+import com.creavispace.project.common.post.repository.PostRepository;
+import com.creavispace.project.domain.community.entity.CommunityCategory;
 import com.creavispace.project.domain.community.repository.CommunityRepository;
-import com.creavispace.project.domain.hashTag.entity.CommunityHashTag;
-import com.creavispace.project.domain.hashTag.repository.CommunityHashTagRepository;
-import com.creavispace.project.domain.project.dto.response.ProjectLinkResponseDto;
-import com.creavispace.project.domain.project.dto.response.ProjectListReadResponseDto;
 import com.creavispace.project.domain.project.entity.Project;
 import com.creavispace.project.domain.project.repository.ProjectRepository;
-import com.creavispace.project.domain.recruit.dto.response.RecruitListReadResponseDto;
-import com.creavispace.project.domain.recruit.dto.response.RecruitTechStackResponseDto;
 import com.creavispace.project.domain.recruit.entity.Recruit;
 import com.creavispace.project.domain.recruit.repository.RecruitRepository;
 import com.creavispace.project.domain.search.dto.response.SearchListReadResponseDto;
-import com.creavispace.project.domain.search.entity.SearchResultSet;
-import com.creavispace.project.common.exception.CreaviCodeException;
-import com.creavispace.project.common.exception.GlobalErrorCode;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -39,135 +30,59 @@ public class SearchServiceImpl implements SearchService{
     private final ProjectRepository projectRepository;
     private final CommunityRepository communityRepository;
     private final RecruitRepository recruitRepository;
-    private final CommunityHashTagRepository communityHashTagRepository;
+    private final PostRepository postRepository;
 
+    @Transactional(readOnly = true)
     @Override
-    public SuccessResponseDto<List<SearchListReadResponseDto>> readSearchList(Integer size, Integer page, String text,
+    public SuccessResponseDto<List<SearchListReadResponseDto>> readSearchList(Pageable pageable, String text,
             SearchType searchType) {
-        List<SearchListReadResponseDto> data = null;
-        Pageable pageRequest = PageRequest.of(page-1, size);
-        Page<SearchResultSet> pageable;
-
+        // 검색 조건에 맞는 Post 엔티티 조회
+        Page<Post> postPage;
         if(searchType == null){
-            pageable = projectRepository.findIntegratedSearchData(text, pageRequest);
-        }else{
-            switch (searchType.name()) {
-                case "PROJECT":
-                    pageable = projectRepository.findProjectSearchData(text, pageRequest);
-                    break;
-
-                case "TEAM":
-                    pageable = projectRepository.findProjectCategorySearchData(text, searchType.name() ,pageRequest);
-                    break;
-                    
-                case "INDIVIDUAL":
-                    pageable = projectRepository.findProjectCategorySearchData(text, searchType.name() ,pageRequest);
-                    break;
-                    
-                case "RECRUIT":
-                    pageable = recruitRepository.findRecruitSearchData(text, pageRequest);
-                    break;
-                    
-                case "PROJECT_RECRUIT":
-                    pageable = recruitRepository.findRecruitCategorySearchData(text, searchType.name(), pageRequest);
-                    break;
-                    
-                case "STUDY":
-                    pageable = recruitRepository.findRecruitCategorySearchData(text, searchType.name(), pageRequest);
-                    break;
-                
-                case "COMMUNITY":
-                    pageable = communityRepository.findCommunitySearchData(text, pageRequest);
-                    break;
-                    
-                case "QNA":
-                    pageable = communityRepository.findCommunityCategorySearchData(text, searchType.name(), pageRequest);
-                    break;
-                    
-                case "CHAT":
-                    pageable = communityRepository.findCommunityCategorySearchData(text, searchType.name(), pageRequest);
-                    break;
-                    
-                case "CONCERN":
-                    pageable = communityRepository.findCommunityCategorySearchData(text, searchType.name(), pageRequest);
-                    break;
-                    
+            // 모든 게시글 조회
+            postPage = postRepository.findBySearch(text, pageable);
+        } else {
+            // 검색 카테고리
+            String category = searchType.getCategory();
             
-                default:
-                    throw new CreaviCodeException(GlobalErrorCode.TYPE_NOT_FOUND);
+            if (searchType.getPostType().equals(PostType.PROJECT)) {
+                // 프로젝트 카테고리
+                Project.Category projectCategory = Project.Category.valueOf(category);
+                // 검색 조건에 따른 프로젝트 조회(text,category)
+                postPage = projectRepository.findBySearch(text, projectCategory, pageable);
+                
+            } else if (searchType.getPostType().equals(PostType.RECRUIT)) {
+                // 모집 카테고리
+                Recruit.Category recruitCategory = Recruit.Category.valueOf(category);
+                // 검색 조건에 따른 모집 조회(text,category)
+                postPage = recruitRepository.findBySearch(text, recruitCategory, pageable);
+                
+            } else if (searchType.getPostType().equals(PostType.COMMUNITY)) {
+                // 커뮤니티 카테고리
+                CommunityCategory communityCategory = CommunityCategory.valueOf(category);
+                // 검색 조건에 따른 커뮤니티 조회(text,category)
+                postPage = communityRepository.findBySearch(text, communityCategory, pageable);
+                
+            } else {
+                throw new IllegalArgumentException("일치하는 searchType(" + searchType +")이 존재하지 않습니다.");
             }
         }
 
-        if(!pageable.hasContent()) throw new CreaviCodeException(GlobalErrorCode.NOT_SEARCH_CONTENT);
-        List<SearchResultSet> searchResults = pageable.getContent();
+        // 결과값이 없으면 204 반환
+        if(!postPage.hasContent()) throw new CreaviCodeException("",204);
 
-        data = searchResults.stream()
-            .map(searchResult -> {
-                Long postId = searchResult.getPostId();
-                switch (searchResult.getPostType()) {
-                    case "PROJECT":
-                        Project project = projectRepository.findByIdAndStatusTrue(postId).orElseThrow(() -> new CreaviCodeException(GlobalErrorCode.PROJECT_NOT_FOUND));
-                        return ProjectListReadResponseDto.builder()
-                            .id(project.getId())
-                            .postType(PostType.PROJECT.name())
-                            .category(project.getCategory().name())
-                            .title(project.getTitle())
-                            .links(project.getLinks().stream()
-                                .map(link -> ProjectLinkResponseDto.builder()
-                                    .linkType(link.getLinkType())
-                                    .url(link.getUrl())
-                                    .build())
-                                .collect(Collectors.toList()))
-                            .thumbnail(project.getThumbnail())
-                            .bannerContent(project.getBannerContent())
-                            .build();
-                    case "RECRUIT":
-                        Recruit recruit = recruitRepository.findByIdAndStatusTrue(postId).orElseThrow(()-> new CreaviCodeException(GlobalErrorCode.RECRUIT_NOT_FOUND));
-                        return RecruitListReadResponseDto.builder()
-                            .id(recruit.getId())
-                            .postType(PostType.RECRUIT.name())
-                            .category(recruit.getCategory().name())
-                            .title(recruit.getTitle())
-                            .content(recruit.getContent())
-                            .amount(recruit.getAmount())
-                            .now(recruit.getPositions().stream()
-                                .mapToInt(position -> position.getNow())
-                                .sum())
-                            .techStacks(recruit.getTechStacks().stream()
-                                .map(techstack -> RecruitTechStackResponseDto.builder()
-                                    .techStack(techstack.getTechStack().getTechStack())
-                                    .iconUrl(techstack.getTechStack().getIconUrl())
-                                    .build())
-                                .collect(Collectors.toList()))
-                            .build();
-                    case "COMMUNITY":
-                        Community community = communityRepository.findByIdAndStatusTrue(postId).orElseThrow(()-> new CreaviCodeException(GlobalErrorCode.COMMUNITY_NOT_FOUND));
-                        List<CommunityHashTag> communityHashTags = communityHashTagRepository.findByCommunityIdFetch(community.getId());
-                        return CommunityResponseDto.builder()
-                            .id(community.getId())
-                            .postType(PostType.COMMUNITY.name())
-                            .category(community.getCategory().name())
-                            .memberId(community.getMember().getId())
-                            .memberNickName(community.getMember().getMemberNickname())
-                            .memberProfile(community.getMember().getProfileUrl())
-                            .viewCount(community.getViewCount())
-                            .createdDate(community.getCreatedDate())
-                            .modifiedDate(community.getModifiedDate())
-                            .title(community.getTitle())
-                            .content(community.getContent())
-                            .hashTags(communityHashTags.stream()
-                                .map(hashTag -> CommunityHashTagDto.builder()
-                                    .hashTag(hashTag.getHashTag().getHashTag())
-                                    .build())
-                                .collect(Collectors.toList()))
-                            .build();
-                    default:
-                        throw new CreaviCodeException(GlobalErrorCode.TYPE_NOT_FOUND);
-                }
-            })
-            .collect(Collectors.toList());
+        // 검색 결과 toDto
+        List<SearchListReadResponseDto> data = postPage.getContent().stream()
+                .map(post -> SearchListReadResponseDto.builder()
+                        .id(post.getId())
+                        .postType(post.getPostType())
+                        .title(post.getTitle())
+                        .thumbnail(post.getThumbnail())
+                        .bannerContent(post.getBannerContent())
+                        .createdDate(post.getCreatedDate())
+                        .build())
+                .toList();
 
-        log.info("/search/service : readSearchList success data = {}", data);
         // 성공 응답 반환
         return new SuccessResponseDto<>(true, "통합 검색 리스트 조회가 완료되었습니다.", data);
     }
